####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = modigliani

EXTRA_DIST = nettrader.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO modigliani.lsm NTBP_BNF.txt modigliani.doxygen 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 

#AUTOMAKE_OPTIONS = foreign 1.7


