####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = 
nettrader_SOURCES = 
nettrader_LDADD   = ./ntsrc/libntsrc.a ./nt3dsrc/libnt3dsrc.a ./ntgsrc/libntgsrc.a ./ntbpsrc/libntbpsrc.a ./examples/libexamples.a ./auxsrc/libauxsrc.a -L/usr/X11R6/lib -lGL -lGLU -lm -lXext -lX11

SUBDIRS = ntsrc nt3dsrc ntgsrc ntbpsrc examples tnt auxsrc 

####### kdevelop will overwrite this part!!! (end)############

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
LDFLAGS = $(all_libraries) 
                                                                                
