noinst_LIBRARIES = libmbase.a

libmbase_a_SOURCES = Two_dim_histogram.c++ \
Multidim_histogram.c++ \
Binomial_rnd_dist.c++ \
Vector.c++ \
Vector3.c++ \
Vec_rnd_dist.c++ \
Value.c++ \
Uniform_vec_rnd_dist.c++ \
Uniform_rnd_dist.c++ \
Stock_value.c++ \
Sequential_statistics.c++ \
Rnd_dist.c++ \
Obj.c++ \
List.c++ \
Image.c++ \
Id_management.c++ \
Histogram.c++ \
Gui_drv.c++ \
Gaussian_vec_rnd_dist.c++ \
Gaussian_rnd_dist.c++ \
Error.c++ \
Date.c++ \
Currency.c++ \
aux_math_func.c++ \
Config_file_parser.c++ \
Str2real.cpp

EXTRA_DIST= Dmatrix.h\
aux_math_func.c++ aux_math_func.h\
codes.h\
Currency.c++ Currency.h\
Date.c++ Date.h\
Error.c++ Error.h\
Gaussian_rnd_dist.c++\
Gaussian_rnd_dist.h\
Gaussian_vec_rnd_dist.c++\
Gaussian_vec_rnd_dist.h\
Gui_drv.c++ Gui_drv.h\
Header_string.h\
Histogram.c++\
Histogram.h\
Id_management.c++\
Id_management.h\
Image.c++\
Image.h\
List.c++\
List.h\
main.h\
moonmap_image_data.h\
Obj.c++\
Obj.h\
Rnd_dist.c++ Rnd_dist.h\
Sequential_statistics.c++\
Sequential_statistics.h\
Simple_markov.h\
Stock_value.c++\
Stock_value.h\
Timing.h\
types.h\
Uniform_rnd_dist.c++ Uniform_rnd_dist.h\
Uniform_vec_rnd_dist.c++ Uniform_vec_rnd_dist.h\
Value.c++\
Value.h\
Vec_rnd_dist.c++ Vec_rnd_dist.h\
Vector3.c++\
Vector3.h\
Vector.c++\
Vector.h\
worldmap_image_data.h\
Binomial_rnd_dist.c++\
Binomial_rnd_dist.h\
Multidim_array.h\
Multidim_histogram.c++\
Multidim_histogram.h\
Ring_buffer.h\
Two_dim_histogram.c++\
Two_dim_histogram.h\
MTrand.h\
physical_constants.h\
Config_file_parser.c++\
Config_file_parser.h\
Str2real.c++\
Str2real.h

# set the include path found by configure
INCLUDES= $(all_includes) -I$(top_srcdir)/modigliani
