noinst_LIBRARIES = libmcore.a

libmcore_a_SOURCES = File_based_stochastic_multi_current.c++\
Leak_current.c++\
Ion_channels.c++\
Lua_based_deterministic_multi_current.c++\
Lua_based_stochastic_multi_current.c++\
Membrane_compartment.c++\
Membrane_current.c++\
Membrane_patch.c++\
Multi_current.c++\
auxfunc.c++\
Custom_cylindrical_compartment.c++\
Cylindrical_compartment.c++\
Membrane_compartment_sequence.c++\
Membrane.c++\
Object.c++\
Transition_rate_matrix.c++\
Spherical_compartment.c++\
Synaptic_background.c++

EXTRA_DIST = $(libmcore_a_SOURCES) File_based_stochastic_multi_current.h\
Leak_current.h\
Ion_channels.h\
Lua_based_deterministic_multi_current.h\
Lua_based_stochastic_multi_current.h\
Membrane_compartment.h\
Membrane_current.h\
Membrane_patch.h\
Multi_current.h\
auxfunc.h\
Custom_cylindrical_compartment.h\
Cylindrical_compartment.h\
Membrane_compartment_sequence.h\
Membrane.h\
Object.h\
Transition_rate_matrix.h\
Spherical_compartment.h\
Synaptic_background.h

# set the include path found by configure
INCLUDES= $(all_includes) -I$(top_srcdir)/modigliani


noinst_HEADERS = auxfunc.h

