####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libntgsrc.a

libntgsrc_a_SOURCES = ntg_value_node_obj.cpp ntg_undirected_graph_obj.cpp ntg_random_ring_graph_obj.cpp ntg_random_graph_obj.cpp ntg_node_obj.cpp ntg_neighbour_ring_graph_obj.cpp ntg_matrix_graph_obj.cpp ntg_graph_obj.cpp ntg_edge_obj.cpp 


EXTRA_DIST = ntg_edge_obj.cpp ntg_edge_obj.h ntg_graph_obj.cpp ntg_graph_obj.h ntg_matrix_graph_obj.cpp ntg_matrix_graph_obj.h ntg_neighbour_ring_graph_obj.cpp ntg_neighbour_ring_graph_obj.h ntg_node_obj.cpp ntg_node_obj.h ntg_random_graph_obj.cpp ntg_random_graph_obj.h ntg_random_ring_graph_obj.cpp ntg_random_ring_graph_obj.h ntg_undirected_graph_obj.cpp ntg_undirected_graph_obj.h ntg_value_node_obj.cpp ntg_value_node_obj.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes) -I$(top_srcdir)/modigliani


